--- a/requirements.txt
+++ b/requirements.txt
@@ -4,13 +4,16 @@ attrs==21.2.0
 cachetools==4.2.2
 certifi==2021.10.8
 charset-normalizer==2.0.7
+dj-database-url==0.5.0
 Django==3.2.9
 django-environ==0.8.1
+django-heroku==0.3.1
 djangorestframework==3.12.4
 drf-spectacular==0.20.2
 idna==3.3
 inflection==0.5.1
 jsonschema==4.2.1
+psycopg2==2.9.1
 pyrsistent==0.18.0
 python-telegram-bot==13.7
 pytz==2021.3
@@ -24,3 +27,4 @@ tzdata==2021.5
 tzlocal==4.1
 uritemplate==4.1.1
 urllib3==1.26.7
+whitenoise==5.3.0
