--- a/requirements.txt
+++ b/requirements.txt
@@ -10,6 +10,7 @@ django-environ==0.8.1
 django-heroku==0.3.1
 djangorestframework==3.12.4
 drf-spectacular==0.20.2
+gunicorn==20.1.0
 idna==3.3
 inflection==0.5.1
 jsonschema==4.2.1
